--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+* {
+  box-sizing: border-box;
+  font-family: cursive;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.active {
+  color: lime;
+  font-weight: 600;
+}
